--- a/events.tac.local/packages.config
+++ b/events.tac.local/packages.config
@@ -4,8 +4,16 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net462" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.0" targetFramework="net462" />
   <package id="Sitecore.Mvc.Analytics.NoReferences" version="9.0.0" targetFramework="net462" />
   <package id="Sitecore.Mvc.NoReferences" version="9.0.0" targetFramework="net462" />
+  <package id="System.ComponentModel" version="4.0.1" targetFramework="net462" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net462" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net462" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net462" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net462" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net462" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net462" />
 </packages>
