--- a/events.tac.local/events.tac.local.csproj
+++ b/events.tac.local/events.tac.local.csproj
@@ -105,13 +105,16 @@
   <ItemGroup>
     <Compile Include="Business\BreadcrumbBuilder.cs" />
     <Compile Include="Business\MainNavigationBuilder.cs" />
+    <Compile Include="Business\NavigationBuilder.cs" />
     <Compile Include="Controllers\BreadcrumbController.cs" />
     <Compile Include="Controllers\EventIntroController.cs" />
     <Compile Include="Controllers\GenericCalloutController.cs" />
     <Compile Include="Controllers\MainNavigationController.cs" />
+    <Compile Include="Controllers\NavigationController.cs" />
     <Compile Include="GenericCalloutServicesConfigurator.cs" />
     <Compile Include="Models\EventIntro.cs" />
     <Compile Include="Models\NavigationItem.cs" />
+    <Compile Include="Models\NavigationMenuItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GenericCalloutService.cs" />
     <Compile Include="Services\IGenericCalloutService.cs" />
@@ -224,6 +227,9 @@
     <Content Include="App_Config\Include\Feature.GenericCallout.config">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="App_Config\Include\TAC\Events\Events.site.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -244,6 +250,7 @@
     <Content Include="Views\MainNavigation\Index.cshtml" />
     <Content Include="Views\MetaNavigation\MetaNavigation.cshtml" />
     <Content Include="Views\GenericCallout\Index.cshtml" />
+    <Content Include="Views\Navigation\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
